syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcEdsService";

package envoy;

// service definition.
service EndpointRegisterService {
  // Sends a greeting
  rpc List (google.protobuf.Empty) returns (EndpointRegisterListResponse);
  rpc Get (EndpointRegisterGetRequest) returns (EndpointRegisterServiceItem);
  rpc Add (EndpointRegisterAddRequest) returns (EndpointRegisterServiceItem);
  rpc Update (EndpointRegisterUpdateRequest) returns (EndpointRegisterServiceItem);
  rpc Delete (EndpointRegisterDeleteRequest) returns (google.protobuf.Empty);
}

// The request message
message EndpointRegisterGetRequest {
  string service_name = 1;
}
message EndpointRegisterAddRequest {
  string service_name = 1;
  EndpointRegisterServiceItem service = 2;
}
message EndpointRegisterUpdateRequest {
  string service_name = 1;
  EndpointRegisterServiceItem service = 2;
}
message EndpointRegisterDeleteRequest {
  string service_name = 1;
}

// The response message
message EndpointRegisterListResponse {
  map<string, EndpointRegisterServiceItem> services = 1;
}

// types
message EndpointRegisterServiceItem {
  repeated EndpointRegisterHost hosts = 1;
}
message EndpointRegisterHost {
  string ip_address = 1;
  uint32 port = 2;
  EndpointRegisterTags tags = 3;
}
message EndpointRegisterTags {
  string az = 1;
  bool canary = 2;
  uint32 load_balancing_weight = 3;
}
